--- a/styles.css
+++ b/styles.css
@@ -188,8 +188,8 @@ a {
 
 .features__content {
   position: absolute;
-  top: 25%;
-  left: 50%;
+  top: 15%;
+  left: 55%;
 }
 
 .features__text {
@@ -393,13 +393,16 @@ a {
 
 .right-box {
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .card {
   width: 452px;
   height: 183px;
   background-color: rgba(255, 255, 255, 0.08);
-  padding: 3%;
+  padding: 2%;
   display: flex;
   flex-direction: column;
   gap: 10%;
@@ -409,6 +412,7 @@ a {
 .card-header {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 15px;
 }
 
 .card-header-left {
@@ -461,6 +465,7 @@ a {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 24.51px;
+  margin-bottom: 15px;
 }
 
 .card-date p {
@@ -468,7 +473,7 @@ a {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 19.07px;
-  color: rgba(255, 255, 255, 0.748);
+  color: rgba(255, 255, 255, 0.582);
 }
 
 /* footer */
