--- a/styles.css
+++ b/styles.css
@@ -412,7 +412,7 @@ a {
 .card-header {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 15px;
+  margin-bottom: 15dpx;
 }
 
 .card-header-left {
