--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,28 @@
-* {
+/* Basic setup and reset */
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
-}
-
-html {
   box-sizing: border-box;
 }
 
+:root {
+  --primary-color: orangered;
+  --secondary-color: orange;
+  --light-color: #f9fafb;
+  --dark-color: rgba(26, 25, 23, 1);
+}
+
+html,
 body {
+  font-family: 'Open Sans', sans-serif;
+  scroll-behavior: smooth;
+  line-height: 1.6;
   color: white;
+  background-color: #000000da;
 }
 
-/* reset ul */
-ul {
-  list-style: none;
-}
-
-/* reset link */
 a {
   text-decoration: none;
   color: inherit;
@@ -29,124 +34,220 @@ a {
   letter-spacing: 10%;
 }
 
-.nav {
-  position: absolute;
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.btn {
+  display: inline-block;
+  padding: 1.2rem 4rem;
+  border: 1px solid var(--secondary-color);
+  border-radius: 10px;
+  background-color: var(--secondary-color);
+  color: var(--dark-color);
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.hero-content {
+  text-align: center;
+}
+
+.btn:hover {
+  background: var(--primary-color);
+  color: white;
+  border: 1px solid white;
+}
+
+.container-sm {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+/* navbar */
+.navbar {
+  background-color: black;
+  color: white;
+  padding: 1rem 2rem;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  right: 0;
+  z-index: 1000;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.navbar.navbar-scroll {
+  background: rgba(0, 0, 0, 0.498);
+  /* backdrop-filter: blur(100px); */
+}
+
+main {
+  height: 100vh;
+}
+
+.navbar-flex {
   display: flex;
-  background-color: hsla(0, 0%, 0%, 0.719);
   justify-content: space-between;
   align-items: center;
-  height: 90px;
+}
+
+.navbar img {
+}
+
+.navbar .main-menu-list {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  font-weight: 600;
+}
+
+.navbar a {
   color: white;
-  padding: 0 8.3%;
 }
 
-.nav__brand a {
-  font-size: 24px;
-  line-height: 32.68px;
-  letter-spacing: 10%;
+.navbar a:hover {
+  color: var(--secondary-color);
 }
 
-.nav__menu {
-  display: flex;
-  gap: 30px;
+/* mobile-menu */
+.mobile-menu {
+  display: none;
 }
 
-.nav__button-group {
-  display: flex;
-  gap: 30px;
+.navbar .mobile-menu-toggle {
+  color: #fff;
+  cursor: pointer;
 }
 
-.hero {
-  height: 100vh;
-  /* margin-top: -10px;
-  clip-path: inset(10px 0); */
-  background-image: url('Assets/main-bg.jpg');
-  background-size: cover;
-  background-position: center;
-  box-shadow: 0 0 20px 20px black;
+.navbar .mobile-menu-items {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 0.95;
+  padding: 3rem 2rem;
+  text-align: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  transform: translateX(100%);
+  transition: transform 0.3s ease;
+}
 
+.navbar .mobile-menu-items.active {
+  transform: translateX(0);
+}
+
+.navbar .mobile-menu-items {
   display: flex;
   flex-direction: column;
-  gap: 57.25px;
+  gap: 2rem;
+  font-size: 1.2rem;
+}
+
+/* hero */
+
+.hero {
+  background: #000 url('/Assets/main-bg.jpg') center center/cover no-repeat;
+  height: 100vh;
+  padding: 11.5rem 2rem 8rem;
+  color: white;
+  overflow-x: hidden;
+  position: relative;
+  box-shadow: 0 0 30px 30px black;
+}
+
+.hero-flex {
+  display: flex;
   justify-content: center;
-  align-items: center;
+  gap: 6rem;
+  padding-bottom: 8rem;
 }
 
 .hero h1 {
-  font-size: 72px;
+  font-size: 3.5rem;
+  margin-bottom: 1rem;
+  font-family: 'Abel', sans-serif;
+  text-transform: uppercase;
   font-weight: 400;
   line-height: 91.76px;
   letter-spacing: 3px;
-  font-family: 'Abel', sans-serif;
-  text-transform: uppercase;
-}
-
-.hero h3 {
-  font-family: 'Abel', sans-serif;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 30.59px;
-  letter-spacing: 2px;
+  text-align: center;
 }
 
 .hero p {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+  font-family: 'Abel', sans-serif;
   font-weight: 400;
-}
-
-.hero .story {
-  position: absolute;
-  left: 50%;
-  bottom: 10%;
-  transform: translateX(-50%);
-}
-
-.hero .story-text {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 22px;
-  text-transform: uppercase;
-}
-
-.hero .svg {
+  line-height: 30.59px;
+  letter-spacing: 2px;
   text-align: center;
 }
 
-.button-cta {
-  padding: 19.5px 87.5px;
-  background-color: orange;
-  color: rgba(26, 25, 23, 1);
-  border-radius: 4px;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  line-height: 21.79px;
-  font-weight: 700;
-}
-
-/* about game */
-.usp {
-  box-shadow: 0 0 20px 20px black;
-  background-image: url('Assets/the-games-bg.jpg');
-  background-size: cover;
-  background-position: center;
+/* ABOUT-------------------------------------------- */
+.about {
+  box-shadow: 0 0 30px 30px black;
+  width: 100%;
   height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  /* position: relative; */
+  padding: 150px 80px;
+
+  background-image: url('Assets/the-games-bg.jpg');
+
+  #about-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+
+    @media (max-width: 768px) {
+      grid-template-columns: 1fr;
+      grid-template-areas:
+        'text'
+        'img';
+      img {
+        grid-area: img;
+      }
+
+      .about-content {
+        grid-area: text;
+      }
+    }
+  }
+
+  .about-content {
+    /* border: 4px solid black; */
+    /* background: pink; */
+  }
+
+  img {
+    /* border: 4px solid black; */
+    /* background: yellow; */
+  }
+
+  @media (max-width: 768px) {
+    padding: 15px;
+    padding-top: 100px;
+    text-align: center;
+    height: 75vh;
+    .about-content {
+      margin-bottom: 30px;
+      font-size: 24px;
+    }
+  }
 }
 
-.usp__text {
-  /* position: absolute;
-  align-self: center;
-  top: 281px;
-  left: 82px; */
-}
-
-.usp h3 {
+.about p {
   font-family: 'Abel', sans-serif;
   font-weight: 400;
   font-size: 24px;
@@ -154,7 +255,7 @@ a {
   letter-spacing: 2px;
 }
 
-.usp h1 {
+.about h1 {
   font-family: 'Abel', sans-serif;
   font-weight: 400;
   font-size: 56px;
@@ -162,208 +263,242 @@ a {
   letter-spacing: 3px;
 }
 
-.usp__img-carousel {
-  width: 50%;
-  height: 50%;
-  background-image: url('Assets/rockpaperstrategy-1600.jpg');
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  /* position: absolute;
-  top: 318px;
-  right: 130px; */
-}
-
-/* features */
+/* FEATURES-------------------------------------------- */
 .features {
   height: 100vh;
-  background-image: url('Assets/bg_features.png');
-  box-shadow: 0 0 30px 30px black;
+  width: 100%;
+  background: url('Assets/bg_features.png');
+  background-position: left;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: left top;
-  position: relative;
-  /* background-repeat: no-repeat; */
+  padding: 120px 80px;
+  box-shadow: 0 0 30px 30px black;
+
+  @media (max-width: 768px) {
+    padding: 80px 0;
+    /* height: 75vh; */
+  }
+
+  .features__content {
+    /* background-color: pink; */
+    margin-left: auto;
+    width: 45vw;
+
+    @media (max-width: 768px) {
+      width: 80vw;
+      margin: 0 auto;
+    }
+  }
+
+  .features__text {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .features__text h3 {
+    font-family: 'Abel', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 30.59px;
+    letter-spacing: 2px;
+  }
+
+  .features__text h1 {
+    font-family: 'Abel', sans-serif;
+    font-weight: 400;
+    font-size: 56px;
+    line-height: 71.37px;
+    letter-spacing: 3px;
+  }
+
+  .timeline {
+    display: flex;
+    gap: 15px;
+  }
+
+  .timeline_right h3 {
+    font-family: 'Abel', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 30.59px;
+    letter-spacing: 2px;
+    color: rgba(255, 181, 72, 1);
+    text-transform: uppercase;
+  }
+
+  .timeline_right p {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 110px;
+  }
+
+  .timeline__circle {
+    margin: 0 auto;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: white;
+  }
+
+  .timeline__line {
+    margin: 0 auto;
+    width: 1px;
+    height: 141px;
+    background-color: white;
+  }
+
+  .circle_black {
+    background-color: black;
+  }
+
+  .circle_2 {
+    margin-bottom: 77px;
+  }
+
+  .h3_2 {
+    margin-bottom: 72px;
+  }
 }
 
-.features__content {
-  position: absolute;
-  top: 15%;
-  left: 55%;
-}
+/* SYSTEM-------------------------------------------- */
 
-.features__text {
-  display: flex;
-  flex-direction: column;
-}
-
-.features__text h3 {
-  font-family: 'Abel', sans-serif;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 30.59px;
-  letter-spacing: 2px;
-}
-
-.features__text h1 {
-  font-family: 'Abel', sans-serif;
-  font-weight: 400;
-  font-size: 56px;
-  line-height: 71.37px;
-  letter-spacing: 3px;
-}
-
-.timeline {
-  display: flex;
-  gap: 15px;
-}
-
-.timeline_right h3 {
-  font-family: 'Abel', sans-serif;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 30.59px;
-  letter-spacing: 2px;
-  color: rgba(255, 181, 72, 1);
-  text-transform: uppercase;
-}
-
-.timeline_right p {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  margin-bottom: 110px;
-}
-
-.timeline__circle {
-  margin: 0 auto;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background-color: white;
-}
-
-.timeline__line {
-  margin: 0 auto;
-  width: 1px;
-  height: 141px;
-  background-color: white;
-}
-
-.circle_black {
-  background-color: black;
-}
-
-.circle_2 {
-  margin-bottom: 77px;
-}
-
-.h3_2 {
-  margin-bottom: 72px;
-}
-
-/* system requirement */
 .system {
+  width: 100%;
   height: 100vh;
   background-image: url('Assets/requirements.png');
   background-size: cover;
-  background-position: center;
-  padding: 5%;
-}
+  padding-top: 80px;
+  padding-left: 70px;
+  box-shadow: 0 0 100px 100px black;
 
-.system__heading {
-  font-family: 'Abel', sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17.84px;
-  letter-spacing: 2px;
-  text-align: center;
-  margin-bottom: 50px;
-}
+  @media (max-width: 768px) {
+    padding-top: 50px;
+    padding-left: 0;
+  }
 
-.system__content h1 {
-  font-family: 'Abel', sans-serif;
-  font-weight: 400;
-  font-size: 56px;
-  line-height: 71.37px;
-  letter-spacing: 3px;
-  margin-bottom: 50px;
-}
+  .system__heading {
+    font-family: 'Abel', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17.84px;
+    letter-spacing: 2px;
+    margin-bottom: 50px;
+    @media (max-width: 768px) {
+      text-align: center;
+    }
+  }
 
-.table {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  height: 400px;
-  /* gap: 30px; */
-}
+  .system__content {
+    /* background-color: pink; */
+  }
 
-.table div {
-}
+  .system__content h1 {
+    font-family: 'Abel', sans-serif;
+    font-weight: 400;
+    font-size: 56px;
+    line-height: 71.37px;
+    letter-spacing: 3px;
+    margin-bottom: 50px;
+    @media (max-width: 768px) {
+      text-align: center;
+    }
+  }
 
-.table div p:first-of-type {
-  font-size: 24px;
-  font-family: 'Abel', sans-serif;
-  font-weight: 400;
-  line-height: 30.59px;
-  letter-spacing: 2px;
-  color: rgba(255, 181, 72, 1);
-}
+  .table {
+    display: flex;
+    flex-direction: column;
 
-.table div p:not(:first-child) {
-  font-size: 18px;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-  line-height: 22px;
-}
-.row1 {
-  border: 1px solid white;
-  border-bottom: none;
-  div {
-    border-right: 1px solid white;
+    width: 50%;
+    height: 350px;
+    /* gap: 30px; */
+
+    @media (max-width: 768px) {
+      width: 90%;
+      margin: 0 auto;
+      height: 500px;
+    }
+  }
+
+  .table div {
+  }
+
+  .table div p:first-of-type {
+    font-size: 24px;
+    font-family: 'Abel', sans-serif;
+    font-weight: 400;
+    line-height: 30.59px;
+    letter-spacing: 2px;
+    color: rgba(255, 181, 72, 1);
+  }
+
+  .table div p:not(:first-child) {
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    line-height: 22px;
+  }
+  .row1 {
+    border: 1px solid white;
+    border-bottom: none;
+    div {
+      border-right: 1px solid white;
+    }
+  }
+
+  .row2 {
+    border: 1px solid white;
+    div {
+      border-right: 1px solid white;
+    }
+  }
+
+  .row3 {
+    border: 1px solid white;
+    border-top: none;
+  }
+
+  .row1,
+  .row2 {
+    display: flex;
+    height: 125px;
+
+    @media (max-width: 768px) {
+      height: 150px;
+    }
+  }
+
+  .row1 *,
+  .row2 * {
+    /* background-color: aliceblue; */
+    width: 100%;
+    padding: 5px;
+  }
+
+  .row3 {
+    /* background-color: aliceblue; */
+    height: 150px;
+    padding: 5px;
   }
 }
 
-.row2 {
-  border: 1px solid white;
-  div {
-    border-right: 1px solid white;
-  }
-}
-
-.row3 {
-  border: 1px solid white;
-  border-top: none;
-}
-
-.row1,
-.row2 {
-  display: flex;
-  height: 125px;
-}
-
-.row1 *,
-.row2 * {
-  /* background-color: aliceblue; */
-  width: 100%;
-  padding: 5px;
-}
-
-.row3 {
-  /* background-color: aliceblue; */
-  height: 150px;
-  padding: 5px;
-}
-
-/* top-scores */
+/* QUOTES-------------------------------------------- */
 .top-scores {
   height: 100vh;
+  width: 100%;
   background-image: url('Assets/the-games-bg.jpg');
-  background-size: cover;
-  background-position: center;
   display: flex;
-  padding: 5%;
+  padding: 80px;
+  box-shadow: 0 0 120px 120px black;
+  clip-path: inset(2px 0);
+
+  @media (max-width: 768px) {
+    text-align: center;
+    display: block;
+    padding: 0;
+    margin-bottom: 100px;
+  }
 }
 
 .top-scores h1 {
@@ -373,6 +508,12 @@ a {
   line-height: 71.37px;
   letter-spacing: 3px;
   /* margin-bottom: 10px; */
+  @media (max-width: 768px) {
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 15px;
+  }
 }
 
 .left-box p {
@@ -381,6 +522,21 @@ a {
   font-weight: 400;
   line-height: 22px;
   margin-bottom: 30px;
+  @media (max-width: 768px) {
+    margin: 0 auto;
+    font-size: 24px;
+  }
+}
+
+.left-box .btn {
+  text-align: center;
+  @media (max-width: 768px) {
+    margin: 0 auto;
+    font-size: 24px;
+    margin-top: 15px;
+    margin-bottom: 45px;
+    padding: 1rem 3rem;
+  }
 }
 
 .top-scores .left-box {
@@ -389,6 +545,9 @@ a {
   justify-content: center;
   align-items: flex-start;
   width: 50%;
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
 
 .right-box {
@@ -407,6 +566,13 @@ a {
   flex-direction: column;
   gap: 10%;
   border-radius: 10px;
+
+  @media (max-width: 768px) {
+    width: 400px;
+    height: 190px;
+    padding: 10%;
+    gap: 8%;
+  }
 }
 
 .card-header {
@@ -476,16 +642,34 @@ a {
   color: rgba(255, 255, 255, 0.582);
 }
 
-/* footer */
+/* NEWSLETTER-------------------------------------------- */
 .newsletter {
-  margin-top: -1px;
-  clip-path: inset(1px 0);
+  width: 100%;
   height: 100vh;
   background-image: url('Assets/newsletter.png');
-  background-size: contain;
   background-position: center;
-  padding-top: 15%;
-  padding-left: 40%;
+  background-size: cover;
+  /* background-color: red; */
+  padding-top: 130px;
+  padding-right: 130px;
+  box-shadow: 0 0 30px 30px black;
+  clip-path: inset(1px 0);
+  @media (max-width: 768px) {
+    padding: 20px;
+    padding-top: 130px;
+  }
+}
+
+.newsletter__content {
+  width: 50%;
+  margin-left: auto;
+  /* background-color: pink; */
+
+  @media (max-width: 768px) {
+    margin-top: 30px;
+    width: 100%;
+    /* background-color: pink; */
+  }
 }
 
 .newsletter h3 {
@@ -495,6 +679,9 @@ a {
   line-height: 30.59px;
   letter-spacing: 2px;
   margin-bottom: 30px;
+  @media (max-width: 768px) {
+    text-align: center;
+  }
 }
 
 .newsletter h1 {
@@ -503,6 +690,10 @@ a {
   font-weight: 400;
   line-height: 82.84px;
   letter-spacing: 3px;
+  @media (max-width: 768px) {
+    text-align: center;
+    margin-bottom: 30px;
+  }
 }
 
 .newsletter p {
@@ -511,10 +702,10 @@ a {
   font-weight: 400;
   line-height: 22px;
   margin-bottom: 50px;
-}
-
-.newsletter__content {
-  width: 80%;
+  @media (max-width: 768px) {
+    /* text-align: center; */
+    margin-bottom: 30px;
+  }
 }
 
 form {
@@ -527,16 +718,92 @@ form label {
 }
 
 form input {
-  background-color: rgba(255, 255, 255, 0.08);
+  background-color: rgba(255, 255, 255, 0.094);
   color: rgba(255, 181, 72, 1);
-  width: 40%;
+  width: 50%;
   height: 60px;
   font-size: 18px;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 24.51px;
 
+  @media (max-width: 768px) {
+    width: 90%;
+  }
+
   /* padding: 20px; */
+}
+
+form .btn {
+  @media (max-width: 768px) {
+    width: 90%;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+}
+
+/* media-queries */
+@media (max-width: 1200px) {
+  .hero .hero-flex {
+    gap: 2rem;
+  }
+
+  .hero img {
+    max-width: 500px;
+    margin-right: 0;
+  }
+
+  .hero h1 {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .hero {
+    text-align: center;
+  }
+
+  .hero .hero-flex {
+    flex-direction: column;
+    padding-bottom: 4rem;
+  }
+
+  .hero img {
+    max-width: 500px;
+    margin-right: 0;
+    margin-top: 2rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .main-menu-items {
+    display: none;
+  }
+
+  .navbar .mobile-menu {
+    display: block;
+  }
+
+  .navbar .mobile-menu-toggle {
+    display: block;
+    padding: 10px;
+  }
+}
+
+@media (max-width: 576px) {
+  .hero {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  .hero h1 {
+    font-size: 2.5rem;
+  }
+
+  .hero img {
+    max-width: 350px;
+  }
 }
 
 /* footer */
@@ -546,13 +813,29 @@ footer {
   height: 233px;
   background-color: black;
   padding: 5% 8.3%;
+  @media (max-width: 768px) {
+    padding: 20% 8.3%;
+  }
 }
 
 footer .nav__menu {
   display: flex;
   justify-content: flex-end;
-  /* align-items: center; */
+  li {
+    margin-left: 80px;
+    @media (max-width: 768px) {
+      text-align: center;
+      margin-left: 0;
+    }
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 30px;
+    /* background-color: pink; */
+  }
 }
+
 .footer-line {
   margin-top: 30px;
   width: auto;
@@ -564,7 +847,12 @@ footer .nav__menu {
 
 .nav__links2 {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
+  align-items: space-between;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 30px;
+  }
 }
 
 .nav__links2 p {
